refactor code by jOOλ